line-v400-test.log
/home/runner/work/TS-LINE/TS-LINE/server.js:364
${product.offers.map((offer) => `・${offer.label} ${money(offer.total)}`).join("
                                                                              ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1713:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.23.1
